--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,9 @@ scala:
 jdk:
   - oraclejdk8
 
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot/
+
 script: sbt ++$TRAVIS_SCALA_VERSION clean compile test
