--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ scala:
   - 2.11.8
 jdk:
   - oraclejdk8
-
 cache:
   directories:
     - $HOME/.ivy2/cache
     - $HOME/.sbt/boot/
-
-script: sbt ++$TRAVIS_SCALA_VERSION clean compile test
+script: 
+  - sbt ++$TRAVIS_SCALA_VERSION clean compile test
+  # Tricks to avoid unnecessary cache updates
+  - find $HOME/.sbt -name "*.lock" | xargs rm
+  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
