--- a/.apibuilder/config
+++ b/.apibuilder/config
@@ -29,3 +29,7 @@ code:
       generators:
         play_2_6_client: "app/generated"
         play_2_6_mock_client: "app/generated"
+    apibuilder-api-mocker:
+      version: latest
+      generators:
+        play_2_6_client: "app/generated"
