--- a/app/resources/reference.conf
+++ b/app/resources/reference.conf
@@ -9,7 +9,9 @@ play.modules.enabled += io.flow.play.clients.ConfigModule
 play.modules.enabled += io.flow.play.clients.RegistryModule
 play.modules.enabled += io.flow.play.clients.TokenClientModule
 play.modules.enabled += io.flow.play.clients.UserClientModule
-play.modules.enabled += io.flow.play.clients.JwtModule
+
+# To enable default Jwt service reading secrets from S3, uncomment the following line in your application.conf
+# play.modules.enabled += io.flow.play.clients.JwtModule
 
 jwt.secrets {
   # Indicates the delay between reload the secrets
