Enable JwtModule by default

--- a/app/resources/reference.conf
+++ b/app/resources/reference.conf
@@ -10,8 +10,9 @@ play.modules.enabled += io.flow.play.clients.RegistryModule
 play.modules.enabled += io.flow.play.clients.TokenClientModule
 play.modules.enabled += io.flow.play.clients.UserClientModule
 
-# To enable default Jwt service reading secrets from S3, uncomment the following line in your application.conf
-# play.modules.enabled += io.flow.play.clients.JwtModule
+# Enable reading secrets from S3
+# Disable the module in your application.conf if your app will never need any authentication
+play.modules.enabled += io.flow.play.clients.JwtModule
 
 jwt.secrets {
   # Indicates the delay between reload the secrets
