Parse bucket and key from s3 uri

--- a/app/resources/reference.conf
+++ b/app/resources/reference.conf
@@ -19,9 +19,7 @@ jwt.secrets {
   reload-interval = 30 seconds
 
   # Indicates where on s3 to read the secrets
-  s3.bucket = ""
-  s3.bucket = ${?JWT_SECRETS_S3_BUCKET}
-  s3.key = ""
-  s3.key = ${?JWT_SECRETS_S3_KEY}
-
+  # URI must start with "s3://" and be of the form "s3://bucket/path/to/file.txt"
+  s3.uri = ""
+  s3.uri = ${?JWT_SECRETS_S3_URI}
 }
