--- a/.apibuilder/config
+++ b/.apibuilder/config
@@ -5,6 +5,11 @@ code:
       generators:
         play_2_6_client: "app/generated"
         play_2_6_mock_client: "app/generated"
+    permission:
+      version: latest
+      generators:
+        play_2_6_client: "app/generated"
+        play_2_6_mock_client: "app/generated"
     error:
       version: latest
       generators:
