Sync apibuilder models. Remove Mockable

--- a/.apibuilder/config
+++ b/.apibuilder/config
@@ -13,7 +13,8 @@ code:
     error:
       version: latest
       generators:
-        play_2_x_json: "app/generated"
+        play_2_6_client: "app/generated"
+        play_2_6_mock_client: "app/generated"
     registry:
       version: latest
       generators:
@@ -34,7 +35,3 @@ code:
       generators:
         play_2_6_client: "app/generated"
         play_2_6_mock_client: "app/generated"
-    apibuilder-api-mocker:
-      version: latest
-      generators:
-        play_2_6_client: "app/generated"
