--- a/conf/reference.conf
+++ b/conf/reference.conf
@@ -1,6 +1,6 @@
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
 play.modules.enabled += "io.flow.play.clients.RegistryModule"
-play.modules.enabled += "io.flow.play.clients.TokenModule"
-play.modules.enabled += "io.flow.play.clients.UserModule"
+play.modules.enabled += "io.flow.play.clients.TokenClientModule"
+play.modules.enabled += "io.flow.play.clients.UserClientModule"
 
 play.http.filters = io.flow.play.util.LoggingFilter
