--- a/conf/reference.conf
+++ b/conf/reference.conf
@@ -3,4 +3,8 @@ play.modules.enabled += "io.flow.play.clients.RegistryModule"
 play.modules.enabled += "io.flow.play.clients.TokenClientModule"
 play.modules.enabled += "io.flow.play.clients.UserClientModule"
 
+# Not keeping play's default of CSRFFilter, SecurityHeadersFilter, and AllowedHostsFilter
 play.http.filters = io.flow.play.util.LoggingFilter
+play.filters.cors.allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+
+play.http.errorHandler = "io.flow.play.util.ErrorHandler"
