--- a/conf/test.conf
+++ b/conf/test.conf
@@ -1,2 +1,4 @@
 play.modules.enabled += "io.flow.log.RollbarModule"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
+play.modules.enabled += "io.flow.play.CoordinatedShutdownActorReaperModule"
+play.modules.enabled += "io.flow.play.CoordinatedShutdownLoggingModule"
