FDN-3751 Add lifecycle hook for rollbar

--- a/standalone/src/main/resources/reference.conf
+++ b/standalone/src/main/resources/reference.conf
@@ -1,3 +1,8 @@
-play.modules.enabled += "io.flow.play.clients.ConfigModule" // lib-play
+// lib-play-standalone is independent of lib-play, and provides its own configuration
+play.modules.disabled += "io.flow.play.clients.ConfigModule"
+// replaces version from lib-play
+play.modules.enabled += "io.flow.play.standalone.FlowConfigModule"
+
 play.modules.enabled += "io.flow.log.RollbarModule"
-play.modules.enabled += "io.flow.play.metrics.MetricsModule"
+// adds shutdown hook to ensure rollbar is closed and flushed
+play.modules.enabled += "io.flow.play.standalone.RollbarLifecycleModule"
