--- a/standalone/src/main/resources/reference.conf
+++ b/standalone/src/main/resources/reference.conf
@@ -1,8 +1,7 @@
-// lib-play-standalone is independent of lib-play, and provides its own configuration
-play.modules.disabled += "io.flow.play.clients.ConfigModule"
-// replaces version from lib-play
+// "io.flow.play.clients.ConfigModule" from lib-play is excluded if present (see StandaloneApp)
 play.modules.enabled += "io.flow.play.standalone.FlowConfigModule"
 
 play.modules.enabled += "io.flow.log.RollbarModule"
+
 // adds shutdown hook to ensure rollbar is closed and flushed
 play.modules.enabled += "io.flow.play.standalone.RollbarLifecycleModule"
