FDN-3751 logging in lib-standalone

--- a/standalone/src/main/resources/reference.conf
+++ b/standalone/src/main/resources/reference.conf
@@ -1,4 +1,4 @@
-// "io.flow.play.clients.ConfigModule" from lib-play is excluded if present (see StandaloneApp)
+// Provides equivalent of io.flow.play.clients.ConfigModule iff lib-play is not on the classpath
 play.modules.enabled += "io.flow.play.standalone.FlowConfigModule"
 
 play.modules.enabled += "io.flow.log.RollbarModule"
